[package]
name = "autonomous_car"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serial = "5.4.1"
sysinfo = "0.30.7"
tokio = { version = "1", features = ["full"] }
nalgebra = "0.32.5"
lstsq = "0.5.0"
kd-tree = "0.5.3"
typenum = "1.17.0"
mpu6050 = "0.1.6"
linux-embedded-hal = "0.4.0"
i2cdev = "0.6.0"
